--- a/app/views/nodes/index.html.erb
+++ b/app/views/nodes/index.html.erb
@@ -11,7 +11,7 @@
 
 <% @nodes.each do |node| %>
   <tr>
-    <td><%= node.title %> is great!</td>
+    <td><%= node.title %></td>
     <td><%= node.description %></td>
     <td><%= link_to 'Show', node %></td>
     <td><%= link_to 'Edit', edit_node_path(node) %></td>
